feat : add open api support to query endpoints
feat(lookup_service) : add open api support for lookup service list endpoint
feat(lookup_doc) : add open api support for lookup service documentation endpoint
feat(topic_manager_doc) : add open api support for topic manager documentation endpoint
feat(topic_manager) : add open api support for topic manager list endpoint
