# pkg/server2/internal/openapi/openapi_non_admin_response_types.gen.go
@@ -11,6 +11,30 @@ type AdmittanceInstructions struct {
 	OutputsToAdmit []uint32 `json:"OutputsToAdmit"`
 }
 
+// LookupMetadata defines model for LookupMetadata.
+type LookupMetadata struct {
+	// IconURL URL to the icon for the lookup service provider
+	IconURL *string `json:"iconURL,omitempty"`
+
+	// InformationURL URL to additional information about the lookup service provider
+	InformationURL *string `json:"informationURL,omitempty"`
+
+	// Name Name of the lookup service provider
+	Name string `json:"name"`
+
+	// ShortDescription Short description of the lookup service provider
+	ShortDescription string `json:"shortDescription"`
+
+	// Version Version of the lookup service provider
+	Version *string `json:"version,omitempty"`
+}
+
+// LookupServiceDocumentation defines model for LookupServiceDocumentation.
+type LookupServiceDocumentation struct {
+	// Documentation Markdown-formatted documentation string
+	Documentation string `json:"documentation"`
+}
+
 // STEAK defines model for STEAK.
 type STEAK map[string]AdmittanceInstructions
 
@@ -19,5 +43,41 @@ type SubmitTransaction struct {
 	STEAK STEAK `json:"STEAK"`
 }
 
+// TopicManagerDocumentation defines model for TopicManagerDocumentation.
+type TopicManagerDocumentation struct {
+	// Documentation Markdown-formatted documentation string for the topic manager
+	Documentation string `json:"documentation"`
+}
+
+// TopicManagerMetadata defines model for TopicManagerMetadata.
+type TopicManagerMetadata struct {
+	// Description Description of the topic manager
+	Description string `json:"description"`
+
+	// IconURL URL to the icon for the topic manager
+	IconURL *string `json:"iconURL,omitempty"`
+
+	// InformationURL URL to additional information about the topic manager
+	InformationURL *string `json:"informationURL,omitempty"`
+
+	// Name Name of the topic manager
+	Name string `json:"name"`
+
+	// Version Version of the topic manager
+	Version *string `json:"version,omitempty"`
+}
+
+// LookupServiceDocumentationResponse defines model for LookupServiceDocumentationResponse.
+type LookupServiceDocumentationResponse = LookupServiceDocumentation
+
+// LookupServicesListResponse defines model for LookupServicesListResponse.
+type LookupServicesListResponse map[string]LookupMetadata
+
 // SubmitTransactionResponse defines model for SubmitTransactionResponse.
 type SubmitTransactionResponse = SubmitTransaction
+
+// TopicManagerDocumentationResponse defines model for TopicManagerDocumentationResponse.
+type TopicManagerDocumentationResponse = TopicManagerDocumentation
+
+// TopicManagersListResponse defines model for TopicManagersListResponse.
+type TopicManagersListResponse map[string]TopicManagerMetadata
